Redux Toolkit, RTK Query, React Router, app's main structure and layout (beta)

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 3px;
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #5e5656;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+}
